test/unrealizableError.slq
def foo[n:â„•](f:int[n]!â†’ğ”¹){} // error
